# multiply

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
designs/: ag-default.ini  ca-default.ini  pf-default.ini  tb-amr.ini
designs/beds/: large_genes.bed
environments/: develop.yml  run.yml
genomes/: .gitignore  collection.ini
genomes/variation/PlasmodiumFalciparum/: files.json  pf6.filtered_snps.CAF.bed  pf6.filtered_snps.EAF.bed  pf6.filtered_snps.ESEA.bed  pf6.filtered_snps.GLOBAL.bed  pf6.filtered_snps.OCE.bed  pf6.filtered_snps.SAM.bed  pf6.filtered_snps.SAS.bed  pf6.filtered_snps.WAF.bed  pf6.filtered_snps.WSEA.bed  process_pf6_data.py
scripts/: create_contig_tiling_pools.py
settings/alignment/primer_dimer/: parameters.json
settings/blast/: parameters.json
settings/primer3/: default.json  relaxed.json  stringent.json  variable.json
settings/select/: individual_costs.ini  pairwise_costs.ini
src/multiply/: cli.py
src/multiply/align/: algorithms.py  commands.py  main.py  nn_model.py
src/multiply/blast/: annotator.py  blast.py  commands.py  main.py  offtarget.py  runner.py
src/multiply/download/: collection.py  commands.py  downloaders.py  fasta.py  genomes.py  gff.py  main.py
src/multiply/generate/: commands.py  main.py  primer3.py  primers.py  targets.py
src/multiply/pipeline/: commands.py
src/multiply/select/: commands.py  cost_functions.py  costs.py  explore.py  main.py  multiplex.py  plot.py  selectors.py
src/multiply/snpcheck/: bedtools.py  main.py  (+1 more)
tests/: test_align.py  test_parsing.py  test_select.py
(+28 files in other folders)
