[metadata]
name = multiply
description = Multplex PCR designed in silico
author = Jason A. Hendry
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers  =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	multiply
install_requires =
	click>=8.0
	pandas>=1.3
	numpy>=1.2
	pysam>=0.1
	scipy>=1.4
	seaborn
	matplotlib
	numba>=0.5
python_requires = >=3.6
package_dir =
	=src
zip_safe = no

[options.entry_points]
console_scripts =
	multiply = multiply.cli:cli

#[options.extras_requires]
#testing =
#   pytest>=6.0
#	pytest-cov>=2.0
#	flake8>=3.9
#	black>=22.0

[flake8]
max-line-length=88
